version 1.4.2, in progress
- More XLS importer fixes
- Add seasonal ARMA
- Add bootstrapped confidence intervals for impulse responses 
  in VAR models
- Add test for multivariate normality of VAR residuals
- Add autocorrelation and ARCH tests for VAR equations
- Add printing of cross-equation covariance matrix for VARs
- Add combined plot of residuals for VARs
- Remove overly verbose notification dialogs
- Editable windows: show Save button as disabled if there's
  nothing to be saved
- Model selection dialog: ensure that the selected regressand 
  is not also listed among the regressors
- Graph editing: make several more types of graph editable
- Graph saving: add PDF option if it's supported by gnuplot
- Main window: don't show generated lags in the list of variables
- ARMA: remove the ARMA item from the Variable menu (it's still
  there in the Model menu); revamp the X-12-ARIMA driver so it
  can handle models with exogenous regressors 
- gretl graph page: add option to save as TeX source
- TeX: enable pdflatex and viewing of TeX output in PDF form
  (to use pdflatex, enter this as the name of the program to
  compile TeX files under /File/Preferences/General/Programs;
  this is now the default on Windows)
- Add "Send To" (email) functionality for data files and scripts

06/30/2005 version 1.4.1
- Fix horrid unnoticed breakage in bhhh_max (broke both arma 
  and tobit, big mess)	
- Add utf8 validation/conversion for database descriptions 
  (Banco de Espana databases)
- Allow dynamic forecasts with models estimated via corc and 
  similar

06/29/2005 version 1.4.0
- Revise definition of functions in gretl scripts (a backward-
  incompatible change) in the interest of more structured
  programming
- Introduce named lists as a type that can be created and
  manipulated
- Big revamp of forecasting code.  Make forecasts available for
  all types of models; give a choice of static versus dynamic
  forecasting where relevant; make forecast standard errors